--- a/AtkTennisWeb/Views/Public/MemberInf.cshtml
+++ b/AtkTennisWeb/Views/Public/MemberInf.cshtml
@@ -3,7 +3,7 @@
 @inject IHttpContextAccessor HttpContextAccessor;
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_MemberLayout";
 }
 
 @{
