--- a/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/MultiReservations.cshtml
@@ -1,5 +1,28 @@
 ﻿@model List<Helpers.Dto.ViewDtos.CourtDto>;
 
+<style>
+
+
+    .reservationForm {
+        padding: 0.8rem 0 0 0 !important;
+        border: 0.5px solid #dedede !important;
+        margin: 0.1rem !important;
+    }
+
+    .custom-control2 {
+        padding: 0.2rem !important;
+    }
+
+    .custom-control-label2::before {
+        top: -0.75rem !important;
+        left: 0.8rem !important;
+    }
+
+    .custom-control-label2::after {
+        top: -0.75rem !important;
+        left: 0.8rem !important;
+    }
+</style>
 
 <div class="content-wrapper">
     <section class="content-header">
@@ -42,17 +65,53 @@
 
                                 <div class="form-group">
                                     <label>Başlangıç Tarihi:</label>
-                                    <input class="form-control" type="date" id="timeNow" style="cursor:pointer; ">
+                                    <input class="form-control" type="date" id="timeNow" style="cursor:pointer;">
                                 </div>
 
                                 <div class="form-group">
-                                    <label>Bitiş Tarihi:</label>
+                                    <label>Başlangıç Tarihi:</label>
                                     <input class="form-control" type="date" id="timeTwoNow" style="cursor:pointer; ">
                                 </div>
 
-                                <div class="form-group">
-                                    <button type="button" class="btn btn-dark" onclick="findSuitability()">Uygunluk Ara</button>
+
+                                <div id="checkDays">
+                                    <label>Gün Seçiniz:</label>
+
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Pazartesi" id="mon">
+                                        <label class="custom-control-label" for="mon">Pazartesi</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Salı" id="tue">
+                                        <label class="custom-control-label" for="tue">Salı</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Çarşamba" id="wed">
+                                        <label class="custom-control-label" for="wed">Çarşamba</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Perşembe" id="thu">
+                                        <label class="custom-control-label" for="thu">Perşembe</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Cuma" id="fri">
+                                        <label class="custom-control-label" for="fri">Cuma</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Cumartesi" id="sat">
+                                        <label class="custom-control-label" for="sat">Cumartesi</label>
+                                    </div>
+                                    <div class="custom-control custom-switch">
+                                        <input type="checkbox" class="custom-control-input" value="Pazar" id="sun">
+                                        <label class="custom-control-label" for="sun">Pazar</label>
+                                    </div>
+
                                 </div>
+
+                                <div class="card-header">
+                                    <button style="margin-top:15px;" type="button" class="btn btn-dark" onclick="findSuitability()">Uygunluk Durumu Ara</button>
+                                </div>
+
 
                             </div>
                         </div>
@@ -61,6 +120,46 @@
             </div>
         </div>
     </section>
+</div>
+
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="rsvModal">
+    <div class="modal-dialog modal-lg" style="max-width:1000px; ">
+        <div class="modal-content">
+            <div class="modal-header" style="background-color:#efefef;">
+                <h5 style="margin:auto; font-family:sans-serif; color:inherit">Çoklu Rezervasyon Yap</h5>
+            </div>
+
+            <div class="modal-header">
+                <div class="row">
+                    <div id="findMem" class="col-lg-4">
+                        <form autocomplete="off">
+                            <div class="form-inline">
+                                <input type="text" class="form-control ui-autocomplete-input" id="findMember" placeholder="Üye Ara" autocomplete="off">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div id="CourtandTime">
+
+            </div>
+
+            <div class="modal-header">
+                <div class="row" id="court_select">
+                    <div id="ResModal" style="display: contents;">
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer" id="forApproveId">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+                <button type="button" class="btn btn-primary" onclick="Approve(this.id)">Rezervasyon Yap</button>
+            </div>
+
+        </div>
+    </div>
 </div>
 
 
@@ -97,55 +196,289 @@
 
     function findSuitability() {
 
+
+
+        var day = [];
+        $('#checkDays input:checked').each(function () {
+            day.push(this.value);
+        });
+
+        var lastDays = "";
+
+        for (var i = 0; i < day.length; i++) {
+
+            var days = day[i];
+            lastDays = days + "," + lastDays;
+        }
+
+
+
         var courtId = $("#courtInf option:selected").val();
         var date = $("#timeNow").val();
         var date2 = $('#timeTwoNow').val();
-        var day = "Pazartesi";
 
 
-        $.ajax({
-            type: "POST",
-            url: '../AdminHome/GetResTimeMulti',
-            cache: false,
-            data: { "courtId": courtId, "dateInf": date, "date2": date2 , "day":day },
-            dataType: "json",
-            async: true,
-            success: function (res) {
+        if (courtId == "" || date == "" || date2 == "" || lastDays == "") {
 
-                if (res == true) {
 
-                    swal({
-                        title: "Dolap Türü Silindi",
-                        text: "Dolap  Başarılı Bir Şekilde Silindi !",
-                        icon: "success",
-                        button: "Tamam",
-                        timer: 600,
-                    }).then((value) => {
 
-                        location.reload();
+            swal({
+                title: "Rezervasyon Onaylanmadı",
+                text: "Lütfen Bilgileri Eksiksiz Giriniz!",
+                icon: "error",
+                button: "Tamam",
+            }).then((value) => {
 
-                    });
 
-                }
-                else {
-                    $.confirm({
-                        title: "Uyarı",
-                        content: " Lütfen sonra tekrar deneyiniz.",
-                        buttons: {
-                            TAMAM: function () {
 
+            });
+
+        }
+
+        else {
+
+            $.ajax({
+
+                type: "POST",
+                url: '../AdminHome/GetResTimeMulti',
+                cache: false,
+                data: { "courtId": courtId, "dateInf": date, "date2": date2, "day": lastDays },
+                dataType: "json",
+                async: true,
+                success: function (res) {
+
+                    if (res != null) {
+
+                        debugger;
+
+                        $("#ResModal").empty();
+
+                        for (var i = 0; i < res.length; i++) {
+
+                            NewRow = "";
+
+
+                            if (res[i].isTaken == true) {
+                                NewRow += '<div style="background-color:rgb(236, 0, 18);" class="form-group reservationForm">';
+                                NewRow += '<div class="custom-control custom-checkbox custom-control2" id="checkTimeTable">';
+                                NewRow += '<input class="custom-control-input custom-control-input-danger custom-control-input-outline" type="checkbox" id="customCheckbox5" checked="" disabled="">';
+                                NewRow += '<label style="color:white; font-weight:inherit;" for="t_' + res[i].timeId + '" class="custom-control-label custom-control-label2">' + res[i].start + '</label>';
+                                NewRow += '</div></div>';
                             }
-                        }
-                    });
-                }
 
-            },
-            error: function (textStatus, errorThrown) {
-                console.log(JSON.stringify(textStatus));
-                console.log(textStatus);
-            }
-        });
+
+                            else {
+
+                                NewRow += '<div  class="form-group reservationForm">';
+                                NewRow += '<div class="custom-control custom-checkbox custom-control2 " id="checkTimeTable">';
+                                NewRow += '<input onclick="checkMe(this.id)" class="custom-control-input custom-control-input-primary" type="checkbox" id= "t_' + res[i].timeId + '" name= "' + res[i].start + '" per= "' + res[i].period + '">';
+                                NewRow += '<label style="font-weight:inherit;" for="t_' + res[i].timeId + '" class="custom-control-label custom-control-label2">' + res[i].start + '</label>';
+                                NewRow += '</div></div>';
+                            }
+
+                            //$("#CourtandTime").empty();
+                            //row = "";
+                            //row += '<div class="modal-header" style="background-color: #004e6c;">';
+                            //row += '<h4 style=" margin:auto; color:white"><i class="fas fa-flag nav-icon"></i>' + ' ' + "Antuka" + ' ' + ' - ' + ' ' + date + '  ' + '  ' +'  ' + date2 + ' ' + ' - ' + ' ' + "day" + ' ' + ':' + ' ' + '</h4>';
+                            //row += '</div>';
+                            //$("#CourtandTime").append(row);
+
+                            $("#ResModal").append(NewRow);
+                        }
+
+                        $('#rsvModal').modal('toggle');
+
+                    }
+                    else {
+                        $.confirm({
+                            title: "Uyarı",
+                            content: " Lütfen sonra tekrar deneyiniz.",
+                            buttons: {
+                                TAMAM: function () {
+
+                                }
+                            }
+                        });
+                    }
+
+                },
+                error: function (textStatus, errorThrown) {
+                    console.log(JSON.stringify(textStatus));
+                    console.log(textStatus);
+                }
+            });
+        }
 
     }
+
+
+    function checkMe(id) {
+
+        var per = $("#" + id).attr("per");
+        var checkID = parseInt(id.split("_")[1]);
+
+        var checkList = [];
+        var checkTrueList = [];
+
+
+        $('#checkTimeTable input:checked:not(:disabled)').each(function () {
+            checkTrueList.push(this.id);
+        });
+
+        for (var i = 0; i < checkTrueList.length; i++) {
+
+            var x = checkTrueList[i];
+
+            if (x != id) {
+
+                checkList.push(x);
+            }
+
+        }
+        checkList.push(id);
+
+
+
+        if (per == 15) {
+
+            if (checkTrueList.length < 4 && checkTrueList.length == 3) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+            }
+
+
+            else if (checkTrueList.length < 4 && checkTrueList.length != 1) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+
+                    $("#t_" + i).prop('checked', false);
+                }
+
+            }
+
+
+
+            else if (checkTrueList.length > 4 && checkList[checkList.length - 1].split("_")[1] - checkList[checkList.length - 2].split("_")[1] == 1) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', true);
+                }
+
+            }
+
+
+            else if (checkTrueList.length > 4) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+
+
+                for (var i = checkID; i < (checkID + 4); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+                }
+            }
+
+            else
+                for (var i = checkID; i < (checkID + 4); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+                }
+        }
+
+        else if (per == 30) {
+
+            if (checkTrueList.length > 2 && checkList[checkList.length - 1].split("_")[1] - checkList[checkList.length - 2].split("_")[1] == 1) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', true);
+                }
+
+            }
+
+            else if (checkTrueList.length > 2) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+
+
+                for (var i = checkID; i < (checkID + 2); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+
+                }
+            }
+
+            else if (checkTrueList.length == 1) {
+
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+
+
+                for (var i = checkID; i < (checkID + 2); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+
+                }
+            }
+
+        }
+
+        else
+
+            if (checkTrueList.length > 1) {
+
+                for (var i = 0; i < checkTrueList.length; i++) {
+
+                    var checkedTime = checkTrueList[i];
+
+                    $('#' + checkedTime).prop('checked', false);
+                }
+
+
+                for (var i = checkID; i < (checkID + 1); i++) {
+
+                    $("#t_" + i).prop('checked', true);
+
+                    checkList.push("t_" + i);
+
+
+                }
+            }
+    }
+
 
 </script>
