--- a/AtkTennisWeb/Views/Public/Reservation.cshtml
+++ b/AtkTennisWeb/Views/Public/Reservation.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Helpers.Dto.PartialViewDtos.ReservationViewDto;
 
+@{
+    Layout = "_MemberLayout";
+}
+
 @using Microsoft.AspNetCore.Http;
 @inject IHttpContextAccessor HttpContextAccessor;
 
